--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "palloc.h": "c",
     "stdint.h": "c",
-    "flags.h": "c"
+    "flags.h": "c",
+    "algorithm": "c",
+    "stdio.h": "c"
   }
 }
