feat: add is_current_idle_thread for public function
this funciton return that current thread is not idle_thread

Co-authored-by: Yeom95 <tjsfls95@gmail.com>
Co-authored-by: loopy-lim <cotmd620389@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "palloc.h": "c",
     "stdint.h": "c",
-    "flags.h": "c"
+    "flags.h": "c",
+    "thread.h": "c"
   }
 }
