--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
       "name": "(gdb) Project1 Thread Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/threads/build/kernel.o",
+      "program": "${workspaceFolder}/userprog/build/kernel.o",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/threads/build",
+      "cwd": "${workspaceFolder}/userprog/build",
       "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
@@ -27,7 +27,7 @@
           "ignoreFailures": true
         }
       ],
-      "miDebuggerServerAddress": "localhost:8000"
+      "miDebuggerServerAddress": "localhost:1234"
     }
   ]
 }
