--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,13 @@
     "filesys.h": "c",
     "file_descriptor_table.h": "c",
     "lib.h": "c",
-    "file_descriptor.h": "c"
+    "file_descriptor.h": "c",
+    "process.h": "c",
+    "main.h": "c",
+    "syscall.h": "c",
+    "debug.h": "c",
+    "malloc.h": "c",
+    "file.h": "c",
+    "exception.h": "c"
   }
 }
