feat: add file close

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "syscall-nr.h": "c",
     "file_descriptor.h": "c",
     "file.h": "c",
-    "filesys.h": "c"
+    "filesys.h": "c",
+    "*.inc": "c"
   },
 }
