stack growth end

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
       "name": "(gdb) Project1 Thread Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/userprog/build/kernel.o",
+      "program": "${workspaceFolder}/vm/build/kernel.o",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/userprog/build",
+      "cwd": "${workspaceFolder}/vm/build",
       "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
