--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(gdb) Project1 Thread Launch",
+      "name": "(gdb) Project03 VM Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/userprog/build/kernel.o",
+      "program": "${workspaceFolder}/vm/build/kernel.o",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/userprog/build",
+      "cwd": "${workspaceFolder}/vm/build",
       "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
