--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,19 @@
     "filesys.h": "c",
     "*.inc": "c",
     "uninit.h": "c",
-    "anon.h": "c"
+    "anon.h": "c",
+    "hash.h": "c",
+    "disk.h": "c",
+    "vaddr.h": "c",
+    "inspect.h": "c",
+    "cksum.h": "c",
+    "stdbool.h": "c",
+    "palloc.h": "c",
+    "mmu.h": "c",
+    "loader.h": "c",
+    "malloc.h": "c",
+    "parallel-merge.h": "c",
+    "bitmap.h": "c",
+    "main.h": "c"
   },
 }
